--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="container">Nowy div</div>
   <p>Hello World!</p>
 
   <p>New changes 1</p>
