Added new file and some work in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <div class="container">Nowy div</div>
   <p>Hello World!</p>
+  <p>Contact</p>
+  <a href="contact.html">Contact</a>
+  <a href="mailTo.html">MailTo</a>
+  <a href="about.html">About</a>
+
 
   <p>New changes 1</p>
 </body>
